# crotolamo2

./: .gitignore  README.md  README_M3.md  crotolamo.desktop  launch.sh  pyproject.toml
.github/workflows/: ci.yml
config/: crotolamo.toml
crotolamo/: __init__.py  __main__.py  logging_setup.py  settings.py
crotolamo/core/: agent.py  hooks.py  llm.py  memory.py  persona.py  router.py
crotolamo/persistence/: db.py  facts.py
crotolamo/safety/: guard.py  paths.py
crotolamo/tools/: __init__.py  base.py  desktop.py  facts.py  files.py  media.py  projects.py  search.py  shortcuts.py  system.py
crotolamo/voice/: interfaces.py  loop.py  normalize.py  state.py  stt.py  tts.py  wake.py  wakeword.py
desktop/: README.md  crotolamo-hud.service  crotolamo.desktop.in  crotolamo.service  crotolamo_hud.py  crotolamo_panel.py  install.sh
interfaces/: listener.py  shell.py
reference/: README.md
reference/c1_checkpoint/chapi_assistant/: launch_orbital_ui.sh  launch_orbital_ui_pro.py  launch_orbital_ui_pro_v17.py  launch_orbital_ui_pro_v18.py  launch_orbital_ui_pro_v19.py  launch_runtime_shell.py  run_runtime_doctor.sh
reference/c1_checkpoint/chapi_assistant/config/: crotolamo_modes.json  crotolamo_settings.example.json  crotolamo_settings.json  crotolamo_v10_notes.md  crotolamo_v11_notes.md  crotolamo_v12_notes.md  crotolamo_v13_v15_notes.md  crotolamo_v7_notes.md  crotolamo_v8_notes.md  security_policy.example.json
reference/c1_checkpoint/chapi_assistant/core/: chapi_shell.py  chapi_shell.py.bak  chapi_shell.py.bak_oido  chapi_shell.py.bak_sin_voz  chapi_shell.py.bak_skills  command_safety.py  command_safety.py.bak_runtime_v3_20260508_005016  config_manager.py  context_engine.py  crotolamo_runtime.py  crotolamo_runtime.py.bak_runtime_v3_20260508_005016  listener.py  listener.py.bak_wake_v1  local_memory.py  ollama_client.py  patch_builder.py  plugin_registry.py  project_indexer.py  project_inspector.py  safe_executor.py  session_history.py  skills.py  skills.py.bak_browser  skills.py.bak_fix_spotify_tletl  skills.py.bak_skills_v2  system_probe.py  task_planner.py  test_runner.py  voice_in.py  voice_in.py.bak_limpieza  voice_out.py  (+1 more)
scripts/: crotolamo_doctor.py  migrate_shortcuts.py  smoke_voz.py  verify_phase.py
tests/: conftest.py  test_agent.py  test_facts.py  test_fase6.py  test_files.py  test_leaked_json.py  test_loop.py  test_memory.py  test_perf_agent.py  test_projects.py  test_router.py  test_safety.py  test_shortcuts.py  test_state.py  test_system.py  test_tools.py  test_tools_coverage.py  test_tts_stop.py  test_voice.py  test_voice_state.py  test_wake.py
wakeword_training/my_custom_model/: crotolamo.onnx
(+86 files in other folders)
